fix image is too large for desktop client

--- a/src/scss/topics/card.view.scss
+++ b/src/scss/topics/card.view.scss
@@ -70,7 +70,7 @@
         margin-left: auto;
         margin-right: auto;
         width:100%;
-        max-width: 100%;
+        max-width: 400px;
         margin-top:5px;
       }
 
